syntax = "proto3";

package NPredUnitPb;

message TLayerConfig {
    uint32 BatchSize = 1;
}

